# ECE479K-Compilers-Labs

./: run_docker.sh
Lab 0/: Lab0 Environment Setup.docx
Lab 0/handout/src/: .gitignore  Makefile  cool.flex  cool.y  test.cl
Lab 1/: .gitignore
Lab 1 and 2/: .gitignore  Lab1 Env Setup.docx
Lab 1 and 2/handout/src_llvm/: cgen.cc  cgen.h  cool_tree.handcode.h  stringtab.handcode.h
Lab 1 and 2/handout/test/: Makefile  boxing.cl  case.cl  cond.cl  copy.cl  dynamic_dispatch.cl  eol.cl  isvoid.cl  iterative.cl  lol.cl  my_test.sh  onemore.cl  order.cl  substr.cl  temp.cl  test.sh  type_name.cl
Lab 1/handout/src_llvm/: cgen.cc  cgen.h
Lab 1/handout/test/: Makefile  block_empty.cl  div_zero.cl
Lab 3/: .gitignore  CMakeLists.txt  RegisterPasses.cpp  UnitLICM.cpp  UnitLICM.h  UnitLoopInfo.cpp  UnitLoopInfo.h  UnitSCCP.cpp  UnitSCCP.h  run.sh  run_dir.sh
Lab 3/outputs/: benchmarks  custom  fun
Lab 3/tests/: invariant.cpp  simple_loop.cpp  test_sccp.cpp
